<resources>
    <string name="app_name">Sample</string>
    <string name="keep_signed_in">Keep signed in</string>
    <string name="loginText">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="register_text">No account yet? Create one</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="emailOrMobile_text">Email or Mobile</string>
    <string name="reset_enter_mail">To reset your password, please enter your email address.</string>
    <string name="know_login_details_text">Know login details ?</string>
    <string name="reset_text">Reset</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="createAccount">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
