<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:fillViewport="true"-->
        <!--android:fitsSystemWindows="true">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/login_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:layout_weight="2.2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp">

                                <EditText
                                    android:id="@+id/userEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:hint="@string/emailOrMobile_text"
                                    android:inputType="textEmailAddress" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <!--  Password Label -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/userPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:hint="@string/password_text"
                                android:inputType="textPassword" />
                        </android.support.design.widget.TextInputLayout>

                        <CheckBox
                            android:id="@+id/member_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/keep_signed_in"
                            android:textColor="#000000"
                            android:theme="@style/Widget.AppCompat.CompoundButton.CheckBox" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/loginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="24dp"
                            android:layout_marginTop="24dp"
                            android:background="@drawable/button_round_corner"
                            android:paddingLeft="50dp"
                            android:paddingRight="50dp"
                            android:onClick="loginClick"
                            android:text="@string/loginText"
                            android:textColor="#FFFFFF"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/forgotLink"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:gravity="center"
                            android:text="@string/forgot_password_text"
                            android:textSize="16dip" />


                        <TextView
                            android:id="@+id/registrationButton"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/register_text"
                            android:textSize="20dip" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:layout_gravity="center"
                        android:layout_weight="0.1"
                        android:gravity="center">

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->
</RelativeLayout>